updated index and added main views

--- a/src/AllergySite/Views/Shared/_Layout.cshtml
+++ b/src/AllergySite/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Physicians">Physicians</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Services">Conditions We Treat</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Offices">Offices</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="PollenMap">Pollen Map</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
