--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -7,53 +7,61 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
+        @*<li data-target="#myCarousel" data-slide-to="3"></li>*@
     </ol>
     <div class="carousel-inner" role="listbox">
+        @*------Home screen-----*@
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/dandelions.jpg" alt="Allergy" class="img-responsive" />
             <div class="carousel-caption" role="option">
+                <h1>Allergy Partners</h1>
                 <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
+                    Allergy Partners has bee providing top quality care for Allergy relief many years.
+                </p>    
+                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/AppointmentForm">
+                        Make an Appointment
+                </a>
             </div>
         </div>
+        @*--------Services-----*@
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/Allergy.jpg" alt="Services" class="img-responsive" />
             <div class="carousel-caption" role="option">
+                <h1>Need Relief?</h1>
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
+                    Do you need relief from your allergy symptoms? Let us help. We specialize in treating a variety of conditions.
                 </p>
+                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/Services">
+                        Learn More
+                </a>                
             </div>
         </div>
+        @*----Locations-----*@
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Package Management" class="img-responsive" />
+            <img src="~/images/Clinic.jpg" alt="Locations" class="img-responsive" />
+            <div class="carousel-caption" role="option">
+                <h1>Locations</h1>
+                <p>
+                    Our practice has multiple offices all around Houston. Find an office near you.
+                </p>
+                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/Offices">
+                        Locations
+                </a>                
+            </div>
+        </div>
+        @*-----Pollen Map-----*@
+        @*<div class="item">
+            <img src="~/images/AAAAIpollenMap.jpg" alt="PollenMap" class="img-responsive" />
+            <h1>Pollen Map</h1>
             <div class="carousel-caption" role="option">
                 <p>
-                    Bring in libraries from NuGet, Bower, and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
+                    See what pollen conditions are like in your area with this map from the AAAAI.
+                    <a class="btn btn-default" href="http://www.aaaai.org/global/nab-pollen-counts?ipb=1">
                         Learn More
                     </a>
                 </p>
             </div>
-        </div>
-        <div class="item">
-            <img src="~/images/banner4.svg" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
-            </div>
-        </div>
+        </div>*@
     </div>
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -66,44 +74,45 @@
 </div>
 
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="http://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699562">Add an appsetting in config and access it in app.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="http://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
+    
+       <div class="card card-1">
+            <h2>Offices</h2>
+            <ul>
+                <li><a href="">Woodlands</a></li>
+                <li><a href="">Medical Center</a></li>
+                <li><a href="">Galleria</a></li>
+                <li><a href="">Sugarland</a></li>
+                <li><a href="">Katie</a></li>
+                <li><a href="">The Heights</a></li>
+                <li><a href="">Pearland</a></li>
+            </ul>
+        </div>
+
+        <div class="card card-1">
+            <h2>Patients</h2>
+            <ul>
+                <li><p>New to Our Practice?</p>
+                    <a class="btn btn-default" style="background-color: cyan;" href="~/Account/Register">Register Here</a></li>
+                <li><p>Already a Patient? Access your information:</p>
+                    <a class="btn btn-default" style="background-color: cyan;" href="~/Account/Login">Patient Portal</a></li>
+            </ul>
+        </div>
+    
+        <div class="card card-1">
+            <h2>Allergy Information</h2>
+            <ul>
+                <li><a href="">Allergic and Non-Allergic Rhinitis</a></li>
+                <li><a href="">Asthma</a></li>
+                <li><a href="">Acute and Chronic Sinusitis</a></li>
+                <li><a href="">Allergic Skin Diseases</a></li>
+                <li><a href="">Food Allergy</a></li>
+                <li><a href="">Angioedema</a></li>
+                <li><a href="">Venom or Insect Allergy</a></li>
+            </ul>
+        </div>
+    
+
+    
+
+    
 </div>
