--- a/src/AllergySite/wwwroot/css/site.css
+++ b/src/AllergySite/wwwroot/css/site.css
@@ -21,6 +21,7 @@ textarea {
 .carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
+    margin-bottom: 100px;
 }
 
 /* buttons and links extension to use brackets: [ click me ] */
@@ -35,10 +36,16 @@ textarea {
     padding-left: 0.5em;
 }
 
+.item{
+    height: 450px;
+}
+
 /* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"]
 {
     width: 100%;
+    min-height: 450px;
+   
 }
 
 /* Hide/rearrange for smaller screens */
@@ -48,3 +55,43 @@ textarea {
     display: none
   }
 }
+
+/*card classes*/ 
+
+.card{
+  background: #fff;
+  border: 1px solid grey;
+  border-radius: 5px 5px;
+  display: inline-block;
+  margin: 1rem;
+  position: relative;
+  width: 31%;
+  text-align: center
+}
+.card-img-top {
+width: 20rem;
+border-radius: 5px 5px;
+}
+
+.card-1{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.card-1:hover{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+ul{
+    list-style: none;
+    margin-left: -40px;
+    
+}
+
+
+
+
+
+
+
+
