added location and condition views

--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <p>
                     Allergy Partners has bee providing top quality care for Allergy relief many years.
                 </p>    
-                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/AppointmentForm">
+                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/AppointmentForm">
                         Make an Appointment
                 </a>
             </div>
@@ -31,7 +31,7 @@
                 <p>
                     Do you need relief from your allergy symptoms? Let us help. We specialize in treating a variety of conditions.
                 </p>
-                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/Services">
+                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/Services">
                         Learn More
                 </a>                
             </div>
@@ -44,7 +44,7 @@
                 <p>
                     Our practice has multiple offices all around Houston. Find an office near you.
                 </p>
-                <a class="btn btn-default" style="background-color: cyan; margin-bottom: 100px;" href="~/Home/Offices">
+                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/Offices">
                         Locations
                 </a>                
             </div>
@@ -75,8 +75,8 @@
 
 <div class="row">
     
-       <div class="card card-1">
-            <h2>Offices</h2>
+       <div class="colom">
+            <h2><a href="Offices">Offices</a></h2>
             <ul>
                 <li><a href="">Woodlands</a></li>
                 <li><a href="">Medical Center</a></li>
@@ -88,18 +88,20 @@
             </ul>
         </div>
 
-        <div class="card card-1">
+        <div class="colom colom-border">
             <h2>Patients</h2>
             <ul>
-                <li><p>New to Our Practice?</p>
-                    <a class="btn btn-default" style="background-color: cyan;" href="~/Account/Register">Register Here</a></li>
-                <li><p>Already a Patient? Access your information:</p>
-                    <a class="btn btn-default" style="background-color: cyan;" href="~/Account/Login">Patient Portal</a></li>
+                <li><p>New to Our Practice?</p></li>
+                <li><a class="btn btn-default" style="background-color: blue; color:white;" href="~/Account/Register">Register Here</a></li>
+                <li><p> </p></li>
+                <li><p>Already a Patient? Access your information:</p></li>
+                <li><a class="btn btn-default" style="background-color:blue; color:white;;" href="~/Account/Login">Patient Portal</a></li>
+                <li><p> </p></li>
             </ul>
         </div>
     
-        <div class="card card-1">
-            <h2>Allergy Information</h2>
+        <div class="colom">
+            <h2><a href="Services">Allergy Information</a></h2>
             <ul>
                 <li><a href="">Allergic and Non-Allergic Rhinitis</a></li>
                 <li><a href="">Asthma</a></li>
