--- a/src/AllergySite/Views/Home/Offices.cshtml
+++ b/src/AllergySite/Views/Home/Offices.cshtml
@@ -2,4 +2,149 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Offices";
 }
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+</head>
+<body>
+
+<div class="card card-1" style="width: 20rem;">
+    
+        <img class="card-img-top" src="" alt="Card image cap">
+        <div class="card-block">
+            <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+        </div>
+        <ul>
+            <li><p>Phone: 713-323-272</p>
+                <p>Fax: 713-490-5873</p>
+            </li>
+            <li><p>Hours: Monday-Friday 8am- 5pm</p>
+                <p>Closed Saturday and Sunday</p>
+            </li>
+            <li><p>10905 Memorial Hermann Dr, Ste 111</p>
+                <p>Pearland Texas 77584</p>
+            </li>
+            
+        </ul>
+        <div class="btn">
+            <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+        </div>
+     
+</div>
+
+    <div class="card card-1" style="width: 20rem;">
+        
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+            </div>
+            <ul>
+                <li>
+                    <p>Phone: 713-323-272</p>
+                    <p>Fax: 713-490-5873</p>
+                </li>
+                <li>
+                    <p>Hours: Monday-Friday 8am- 5pm</p>
+                    <p>Closed Saturday and Sunday</p>
+                </li>
+                <li>
+                    <p>10905 Memorial Hermann Dr, Ste 111</p>
+                    <p>Pearland Texas 77584</p>
+                </li>
+
+            </ul>
+            <div class="btn">
+                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+            </div>
+        
+    </div>
+    <div class="card card-1" style="width: 20rem;">
+        
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+            </div>
+            <ul>
+                <li>
+                    <p>Phone: 713-323-272</p>
+                    <p>Fax: 713-490-5873</p>
+                </li>
+                <li>
+                    <p>Hours: Monday-Friday 8am- 5pm</p>
+                    <p>Closed Saturday and Sunday</p>
+                </li>
+                <li>
+                    <p>10905 Memorial Hermann Dr, Ste 111</p>
+                    <p>Pearland Texas 77584</p>
+                </li>
+
+            </ul>
+            <div class="btn">
+                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+            </div>
+      
+    </div>
+    <div class="card card-1" style="width: 20rem;">
+        
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+            </div>
+            <ul>
+                <li>
+                    <p>Phone: 713-323-272</p>
+                    <p>Fax: 713-490-5873</p>
+                </li>
+                <li>
+                    <p>Hours: Monday-Friday 8am- 5pm</p>
+                    <p>Closed Saturday and Sunday</p>
+                </li>
+                <li>
+                    <p>10905 Memorial Hermann Dr, Ste 111</p>
+                    <p>Pearland Texas 77584</p>
+                </li>
+
+            </ul>
+            <div class="btn">
+                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+            </div>
+       
+    </div>
+    <div class="card card-1" style="width: 20rem;">
+        
+            <img class="card-img-top" src="" alt="Card image cap">
+            <div class="card-block">
+                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+            </div>
+            <ul>
+                <li>
+                    <p>Phone: 713-323-272</p>
+                    <p>Fax: 713-490-5873</p>
+                </li>
+                <li>
+                    <p>Hours: Monday-Friday 8am- 5pm</p>
+                    <p>Closed Saturday and Sunday</p>
+                </li>
+                <li>
+                    <p>10905 Memorial Hermann Dr, Ste 111</p>
+                    <p>Pearland Texas 77584</p>
+                </li>
+
+            </ul>
+            <div class="btn">
+                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+            </div>
+        
+    </div>
+
+</body>
+</html>
+
+
+
