--- a/src/AllergySite/wwwroot/css/site.css
+++ b/src/AllergySite/wwwroot/css/site.css
@@ -10,6 +10,14 @@
     padding-right: 15px;
 }
 
+.navbar-inverse{
+    background-color: blue;
+}
+
+#navbar-color{
+    color: snow;
+}
+
 /* Set widths on the form inputs since otherwise they're 100% wide */
 input,
 select,
@@ -74,11 +82,15 @@ border-radius: 5px 5px;
 }
 
 .card-1{
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-2{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.card-1:hover{
+.card-2:hover{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -88,7 +100,27 @@ ul{
     
 }
 
+.large-card{
+    width: 90%;
+}
 
+.colom{
+  background: #fff;
+  display: inline-block;
+  margin: 1rem;
+  position: relative;
+  width: 31%;
+  text-align: center
+}
+
+.colom-border{
+    border-left: solid black 1px;
+    border-right: solid black 1px;
+}
+
+a{
+    color: black;
+}
 
 
 
