added utils for JSON API and offices maps

--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
 <div class="row">
     
        <div class="colom">
-            <h2><a href="Offices">Offices</a></h2>
+            <h2><a href="/Home/Offices">Offices</a></h2>
             <ul>
                 <li><a href="">Woodlands</a></li>
                 <li><a href="">Medical Center</a></li>
@@ -101,7 +101,7 @@
         </div>
     
         <div class="colom">
-            <h2><a href="Services">Allergy Information</a></h2>
+            <h2><a href="/Home/Services">Allergy Information</a></h2>
             <ul>
                 <li><a href="">Allergic and Non-Allergic Rhinitis</a></li>
                 <li><a href="">Asthma</a></li>
@@ -112,9 +112,4 @@
                 <li><a href="">Venom or Insect Allergy</a></li>
             </ul>
         </div>
-    
-
-    
-
-    
 </div>
