added conditions/services and Physicians views

--- a/src/AllergySite/Views/Home/Physicians.cshtml
+++ b/src/AllergySite/Views/Home/Physicians.cshtml
@@ -2,4 +2,38 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Physians";
 }
+
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title></title>
+</head>
+<body>
+
+    <div class="card card-large card-1">
+        <img class="card-img-left" src="https://upload.wikimedia.org/wikipedia/en/8/87/Cox-season9.jpg" />
+        <div class="card-block">
+            <h4 class="card-title"><a href="/home/Office">Dr. Perry Cox M.D.</a></h4>
+        </div>
+        <ul class="colom-list">
+            <li>
+                <p>	Attending Physician of Internal Medicine, Residency Director, Interim Chief of Medicine, Chief of Medicine</p>
+                <p>This is a filler description of an allergist. He studied at a University and did recidancy at this place. He specializes in treatment of allergic and non-allergic rhinitis, asthma, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, and venom or insect allergy.</p>
+             </li>
+            <li>Woodlands Office</li>
+            <li>Monday-Friday 8am- 5pm</li>
+            
+        </ul>
+        <div class="btn">
+            <a href="" class="btn btn-default" style="background-color: blue; color:white;"> Make an Appointment</a>
+        </div>
+    </div>
+
+  </body>
+</html>
+
