--- a/src/AllergySite/Views/Conditions/rhinitis .cshtml
+++ b/src/AllergySite/Views/Conditions/rhinitis .cshtml
@@ -2,4 +2,35 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "rhinitis";
 }
+
+<html>
+<body>
+    
+    <div>
+        <h1>Nonallergic Rhinitis</h1>
+
+        <p>Nonallergic rhinitis (vasomotor rhinitis) is a condition that causes chronic sneezing, congestion, or runny nose. While these symptoms are similar to those of allergic rhinitis (hay fever), nonallergic rhinitis is different because, unlike an allergy, it doesn’t involve the immune system. An allergic reaction occurs when the immune system overreacts to an otherwise harmless substance known as an allergen.</p>
+
+        <h2>Symptoms</h2>
+        <p>Airborne pollutants or odors, certain foods or beverages, some medications, changes in the weather or underlying chronic health problems can all trigger symptoms of nonallergic rhinitis. These symptoms can come and go, or be constant.</p>
+
+        <p>The most common symptoms of nonallergic rhinitis are:</p>
+        <ul>
+            <li>Stuffy nose</li>
+            <li>Runny nose</li>
+            <li>Sneezing</li>
+            <li>Postnasal drip</li>
+            <li>Unlike the allergic form, nonallergic rhinitis rarely causes itchy nose, eyes or throat.</li>
+        </ul>
+        <h2>Diagnosis and Treatment</h2>
+        <p>It is  important to have an accurate diagnosis so you can manage your condition appropriately. Because the symptoms are so similar, allergy testing is often recommended to rule out allergic rhinitis.</p>
+
+        <p>Nonallergic rhinitis cannot be cured, but many people find relief by avoiding triggers, using a saline rinse solution or by taking over-the-counter or prescription medications.</p>
+    </div>
+
+
+
+</body>
+</html>
