--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             <div class="carousel-caption" role="option">
                 <h1>Allergy Partners</h1>
                 <p>
-                    Allergy Partners has bee providing top quality care for Allergy relief many years.
+                    Allergy Partners has been providing top quality care for allergy relief many years.
                 </p>    
                 <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/AppointmentForm">
                         Make an Appointment
@@ -31,7 +31,7 @@
                 <p>
                     Do you need relief from your allergy symptoms? Let us help. We specialize in treating a variety of conditions.
                 </p>
-                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/Services">
+                <a class="btn btn-default" style="background-color: blue; color:white; margin-bottom: 100px;" href="~/Home/Services">
                         Learn More
                 </a>                
             </div>
@@ -77,12 +77,12 @@
     
        <div class="colom">
             <h2><a href="/Home/Offices">Offices</a></h2>
-            <ul>
-                <li><a href="">Woodlands</a></li>
+            <ul class="colom-list">
+                <li><a href="">The Woodlands</a></li>
                 <li><a href="">Medical Center</a></li>
                 <li><a href="">Galleria</a></li>
                 <li><a href="">Sugarland</a></li>
-                <li><a href="">Katie</a></li>
+                <li><a href="">Katy</a></li>
                 <li><a href="">The Heights</a></li>
                 <li><a href="">Pearland</a></li>
             </ul>
@@ -90,7 +90,7 @@
 
         <div class="colom colom-border">
             <h2>Patients</h2>
-            <ul>
+            <ul class="colom-list">
                 <li><p>New to Our Practice?</p></li>
                 <li><a class="btn btn-default" style="background-color: blue; color:white;" href="~/Account/Register">Register Here</a></li>
                 <li><p> </p></li>
@@ -102,14 +102,14 @@
     
         <div class="colom">
             <h2><a href="/Home/Services">Allergy Information</a></h2>
-            <ul>
+            <ul class="colom-list">
                 <li><a href="">Allergic and Non-Allergic Rhinitis</a></li>
                 <li><a href="">Asthma</a></li>
                 <li><a href="">Acute and Chronic Sinusitis</a></li>
                 <li><a href="">Allergic Skin Diseases</a></li>
                 <li><a href="">Food Allergy</a></li>
-                <li><a href="">Angioedema</a></li>
                 <li><a href="">Venom or Insect Allergy</a></li>
+                <li><a href="">Anaphylaxis</a></li>
             </ul>
         </div>
 </div>
