--- a/src/AllergySite/Views/Home/Offices.cshtml
+++ b/src/AllergySite/Views/Home/Offices.cshtml
@@ -21,7 +21,7 @@
     <div class="card-block">
             <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
         </div>
-        <ul>
+        <ul class="colom-list">
             <li><p>Phone: 713-323-272</p>
                 <p>Fax: 713-490-5873</p>
             </li>
@@ -33,9 +33,9 @@
             </li>
             
         </ul>
-        <div class="btn">
-            <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
-        </div>
+    <div class="btn">
+        <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+    </div>
      
 </div>
 
@@ -46,7 +46,7 @@
             <div class="card-block">
                 <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
             </div>
-            <ul>
+            <ul class="colom-list">
                 <li>
                     <p>Phone: 713-323-272</p>
                     <p>Fax: 713-490-5873</p>
@@ -62,7 +62,7 @@
 
             </ul>
             <div class="btn">
-                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
+                <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
             </div>
         
     </div>
@@ -73,7 +73,7 @@
             <div class="card-block">
                 <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
             </div>
-            <ul>
+            <ul class="colom-list">
                 <li>
                     <p>Phone: 713-323-272</p>
                     <p>Fax: 713-490-5873</p>
@@ -88,9 +88,9 @@
                 </li>
 
             </ul>
-            <div class="btn">
-                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
-            </div>
+        <div class="btn">
+            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+        </div>
       
     </div>
     <div class="card card-1">
@@ -100,7 +100,7 @@
             <div class="card-block">
                 <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
             </div>
-            <ul>
+            <ul class="colom-list">
                 <li>
                     <p>Phone: 713-323-272</p>
                     <p>Fax: 713-490-5873</p>
@@ -115,9 +115,9 @@
                 </li>
 
             </ul>
-            <div class="btn">
-                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
-            </div>
+        <div class="btn">
+            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+        </div>
        
     </div>
     <div class="card card-1">
@@ -127,7 +127,7 @@
             <div class="card-block">
                 <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
             </div>
-            <ul>
+            <ul class="colom-list">
                 <li>
                     <p>Phone: 713-323-272</p>
                     <p>Fax: 713-490-5873</p>
@@ -142,9 +142,9 @@
                 </li>
 
             </ul>
-            <div class="btn">
-                <a href="https://www.google.com/maps/dir//10905+Memorial+Hermann+Dr,+Pearland,+TX+77584/29.5620398,-95.3889753,17z/data=!4m16!1m7!3m6!1s0x86409335cfe70b9d:0x8036e54b15771afa!2s10905+Memorial+Hermann+Dr,+Pearland,+TX+77584!3b1!8m2!3d29.5620398!4d-95.3889753!4m7!1m0!1m5!1m1!1s0x86409335cfe70b9d:0x8036e54b15771afa!2m2!1d-95.3889753!2d29.5620398" type="button">Get Directions</a>
-            </div>
+        <div class="btn">
+            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+        </div>
         
     </div>
 
