--- a/src/AllergySite/wwwroot/css/site.css
+++ b/src/AllergySite/wwwroot/css/site.css
@@ -80,7 +80,10 @@ textarea {
 width: 100%;
 border-radius: 5px 5px;
 }
-
+.card-img-left{
+    float: left;
+    border-radius: 5px 5px;
+}
 .card-1{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
@@ -94,14 +97,13 @@ border-radius: 5px 5px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-ul{
+.colom-list{
     list-style: none;
-    margin-left: -40px;
-    
+    margin-left: -40px;    
 }
 
-.large-card{
-    width: 90%;
+.card-large{
+    width: 100%;
 }
 
 .colom{
