reorganized coditions view and controller

--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <p>
                     Allergy Partners has been providing top quality care for allergy relief many years.
                 </p>    
-                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/AppointmentForm">
+                <a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow; margin-bottom: 100px;" href="~/Home/AppointmentForm">
                         Make an Appointment
                 </a>
             </div>
@@ -31,7 +31,7 @@
                 <p>
                     Do you need relief from your allergy symptoms? Let us help. We specialize in treating a variety of conditions.
                 </p>
-                <a class="btn btn-default" style="background-color: blue; color:white; margin-bottom: 100px;" href="~/Home/Services">
+                <a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow; margin-bottom: 100px;" href="~/conditions">
                         Learn More
                 </a>                
             </div>
@@ -44,7 +44,7 @@
                 <p>
                     Our practice has multiple offices all around Houston. Find an office near you.
                 </p>
-                <a class="btn btn-default" style="background-color: blue; margin-bottom: 100px; color:white;" href="~/Home/Offices">
+                <a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow; margin-bottom: 100px;" href="~/Home/Offices">
                         Locations
                 </a>                
             </div>
@@ -74,42 +74,39 @@
 </div>
 
 <div class="row">
-    
-       <div class="colom">
+    <div class="colom">
+        <div class="card-block">
             <h2><a href="/Home/Offices">Offices</a></h2>
             <ul class="colom-list">
                 <li><a href="">The Woodlands</a></li>
-                <li><a href="">Medical Center</a></li>
-                <li><a href="">Galleria</a></li>
-                <li><a href="">Sugarland</a></li>
-                <li><a href="">Katy</a></li>
-                <li><a href="">The Heights</a></li>
-                <li><a href="">Pearland</a></li>
+                <li><a href="">Texas Medical Center</a></li>
+                <li><a href="">The Galleria</a></li>
             </ul>
+            
         </div>
-
-        <div class="colom colom-border">
+    </div>
+    <div class="colom colom-border">
             <h2>Patients</h2>
             <ul class="colom-list">
-                <li><p>New to Our Practice?</p></li>
-                <li><a class="btn btn-default" style="background-color: blue; color:white;" href="~/Account/Register">Register Here</a></li>
+                <li>New to Our Practice?</li>
+                <li><a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow;" href="~/Account/Register">Register Here</a></li>
                 <li><p> </p></li>
-                <li><p>Already a Patient? Access your information:</p></li>
-                <li><a class="btn btn-default" style="background-color:blue; color:white;;" href="~/Account/Login">Patient Portal</a></li>
-                <li><p> </p></li>
+                <li>Already a Patient? Access your information:</li>
+                <li><a class="btn btn-default" style="background-color:navy; color:lightgoldenrodyellow;" href="~/Account/Login">Patient Portal</a></li>
             </ul>
-        </div>
-    
-        <div class="colom">
-            <h2><a href="/Home/Services">Allergy Information</a></h2>
-            <ul class="colom-list">
-                <li><a href="">Allergic and Non-Allergic Rhinitis</a></li>
-                <li><a href="">Asthma</a></li>
-                <li><a href="">Acute and Chronic Sinusitis</a></li>
-                <li><a href="">Allergic Skin Diseases</a></li>
-                <li><a href="">Food Allergy</a></li>
-                <li><a href="">Venom or Insect Allergy</a></li>
-                <li><a href="">Anaphylaxis</a></li>
-            </ul>
-        </div>
+
+    </div>
+  <div class="colom">
+      <h2><a href="/conditions">Allergy Conditions</a></h2>
+      <ul class="colom-list">
+          <li><a href="/conditions/allergicRhinitis">Allergic Rhinitis</a></li>
+          <li><a href="/conditions/nonallergicRhinitis">Non-Allergic Rhinitis</a></li>
+          <li><a href="/conditions/asthma">Asthma</a></li>
+          <li><a href="/conditions/sinusitus">Acute and Chronic Sinusitis</a></li>
+          <li><a href="/conditions/skinDisease">Allergic Skin Diseases</a></li>
+          <li><a href="/conditions/foodAllergy">Food Allergy</a></li>
+          <li><a href="/conditions/venom">Venom or Insect Allergy</a></li>
+          <li><a href="/conditions/anaphylaxis">Anaphylaxis</a></li>
+      </ul>
+  </div>
 </div>
