--- a/src/AllergySite/Views/Home/Physicians.cshtml
+++ b/src/AllergySite/Views/Home/Physicians.cshtml
@@ -22,8 +22,15 @@
         </div>
         <ul class="colom-list">
             <li>
-                <p>	Attending Physician of Internal Medicine, Residency Director, Interim Chief of Medicine, Chief of Medicine</p>
-                <p>This is a filler description of an allergist. He studied at a University and did recidancy at this place. He specializes in treatment of allergic and non-allergic rhinitis, asthma, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, and venom or insect allergy.</p>
+                <p>
+                    Perry Cox MD, is a board-certified adult and pediatric allergy, asthma, and immunology specialist. He specializes in the diagnosis and treatment of allergic and non-allergic rhinitis, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, venom or insect allergy, and asthma.
+                </p>
+                <p>
+                    He completed his training in Internal Medicine, and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
+                </p>
+                <p>
+                    Dr. Cox is a member of several protentional organizations including Texas Allergy, Asthma and Immunology Society (TAAIS), the American Academy of Allergy, Asthma, and Immunology (AAAAI) and American College of Allergy, Asthma, and Immunology (ACAAI).
+                </p>
              </li>
             <li>Woodlands Office</li>
             <li>Monday-Friday 8am- 5pm</li>
