--- a/src/AllergySite/Views/Shared/_LoginPartial.cshtml
+++ b/src/AllergySite/Views/Shared/_LoginPartial.cshtml
@@ -20,7 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register" style="color:white;">New Patient Register</a></li>
-        <li><a asp-area="" asp-controller="Account" asp-action="Login" style="color:white;">Patient Log in</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register" style="color:lightgoldenrodyellow;">Register</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login" style="color:lightgoldenrodyellow;">Login</a></li>
     </ul>
 }
