--- a/src/AllergySite/Views/Conditions/nonallergicRhinitis.cshtml
+++ b/src/AllergySite/Views/Conditions/nonallergicRhinitis.cshtml
@@ -8,6 +8,21 @@
 <html>
 <body>
     
+    <div style="border-right:solid black 1px;">
+        <h1>Conditions We Treat</h1>
+        <ul>
+            <li><a href="/conditions/allergicRhinitis">Allergic Rhinitis</a></li>
+            <li><a href="/conditions/nonallergicRhinitis">Non-Allergic Rhinitis</a></li>
+            <li><a href="/conditions/asthma">Asthma</a></li>
+            <li><a href="/conditions/sinusitus">Acute and Chronic Sinusitis</a></li>
+            <li><a href="/conditions/skinDisease">Allergic Skin Diseases</a></li>
+            <li><a href="/conditions/foodAllergy">Food Allergy</a></li>
+            <li><a href="/conditions/venom">Venom or Insect Allergy</a></li>
+            <li><a href="/conditions/anaphylaxis">Anaphylaxis</a></li>
+        </ul>
+    </div>
+    <hr />
+
     <div>
         <h1>Nonallergic Rhinitis</h1>
 
@@ -30,6 +45,8 @@
         <p>Nonallergic rhinitis cannot be cured, but many people find relief by avoiding triggers, using a saline rinse solution or by taking over-the-counter or prescription medications.</p>
     </div>
 
+    <hr />
+    <p>Information sourced from<a href="https://www.aaaai.org/conditions-and-treatments/allergies"><img src="http://careers.aaaai.org/headers/cc/responsive/partner_lib/12237/img/logo-12237.gif" style="width:200px;" /></a></p>
 
 
 </body>
