reorganized views added appointment view and controller

--- a/src/AllergySite/Views/Home/Contact.cshtml
+++ b/src/AllergySite/Views/Home/Contact.cshtml
@@ -2,16 +2,12 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"].</h2>
-<h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<p>The developer on this project is Chris Grindereng. You can check out the code for this project on <a style="color: blue;" href="https://github.com/ChrisGrindereng/AllergySite">GitHub</a></p>
+
+<p>If you would like to contact Chris email him at <a style="color: blue;" class="bttmIcons" href="mailto:chris.grindereng@gmail.com">chris.grindereng@gmail.com</a> </p>
+<p>Check out some other work by Chris on his portfolio at <a style="color: blue;" href="https://chrisgrindereng.github.io/profile/">www.chrisgrindereng.org</a></p>
+
+
+
