--- a/src/AllergySite/Views/Home/Index.cshtml
+++ b/src/AllergySite/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <p>
                     Allergy Partners has been providing top quality care for allergy relief many years.
                 </p>    
-                <a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow; margin-bottom: 100px;" href="~/Home/AppointmentForm">
+                <a class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow; margin-bottom: 100px;" href="~/Appointment/Index">
                         Make an Appointment
                 </a>
             </div>
@@ -78,9 +78,9 @@
         <div class="card-block">
             <h2><a href="/Home/Offices">Offices</a></h2>
             <ul class="colom-list">
-                <li><a href="">The Woodlands</a></li>
-                <li><a href="">Texas Medical Center</a></li>
-                <li><a href="">The Galleria</a></li>
+                <li><a href="/Appointment/TexasMedicalCenter">Texas Medical Center</a></li>
+                <li><a href="/Appointment/theGalleria">The Galleria</a></li>
+                <li><a href="/Appointment/theWoodlands">The Woodlands</a></li>
             </ul>
             
         </div>
