--- a/src/AllergySite/Views/Home/Offices.cshtml
+++ b/src/AllergySite/Views/Home/Offices.cshtml
@@ -13,42 +13,39 @@
     <title></title>
 </head>
 <body>
-
-<div class="card card-1">
-         
+    @*-------The Texas Medical Center-----*@
+<div class="card card-1">       
     <iframe class="card-img-top" alt="Card image cap" width="600" height="300" frameborder="0" style="border:0"
-            src="https://www.google.com/maps/embed/v1/place?q=9250+Pinecroft+Dr,+The+Woodlands,+TX+77380&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
+            src="https://www.google.com/maps/embed/v1/place?q=2450+Holcombe+Blvd,+Houston,+TX+77021&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
     <div class="card-block">
-            <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+            <h4 class="card-title"><a href="/Appointment/TexasMedicalCenter">The Texas Medical Center</a></h4>
         </div>
         <ul class="colom-list">
-            <li><p>Phone: 713-323-272</p>
+            <li><p>Phone: 713-323-2720</p>
                 <p>Fax: 713-490-5873</p>
             </li>
             <li><p>Hours: Monday-Friday 8am- 5pm</p>
                 <p>Closed Saturday and Sunday</p>
             </li>
-            <li><p>9250 Pinecroft Dr</p>
-                <p>The Woodlands, Texas 77584</p>
-            </li>
-            
+            <li><p>2450 Holcombe Blvd</p>
+                <p>Houston, Texas 77584</p>
+            </li>   
         </ul>
     <div class="btn">
-        <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+        <a href="/Appointment/TexasMedicalCenter" class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow;">Make an Appointment</a>
     </div>
      
 </div>
-
-    <div class="card card-1">
-        
+    @*-------The Galleria-------*@
+    <div class="card card-1"> 
         <iframe class="card-img-top" alt="Card image cap" width="600" height="300" frameborder="0" style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?q=9250+Pinecroft+Dr,+The+Woodlands,+TX+77380&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
+                src="https://www.google.com/maps/embed/v1/place?q=5085+Westheimer+Rd,+Houston,+TX+77056&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
             <div class="card-block">
-                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+                <h4 class="card-title"><a href="/Appointment/theGalleria">The Galleria</a></h4>
             </div>
             <ul class="colom-list">
                 <li>
-                    <p>Phone: 713-323-272</p>
+                    <p>Phone: 713-323-2720</p>
                     <p>Fax: 713-490-5873</p>
                 </li>
                 <li>
@@ -56,26 +53,26 @@
                     <p>Closed Saturday and Sunday</p>
                 </li>
                 <li>
-                    <p>10905 Memorial Hermann Dr, Ste 111</p>
-                    <p>Pearland Texas 77584</p>
+                    <p>5085 Westheimer Rd</p>
+                    <p>Houston, Texas 77584</p>
                 </li>
 
             </ul>
             <div class="btn">
-                <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+                <a href="/Appointment/theGalleria" class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow;">Make an Appointment</a>
             </div>
-        
     </div>
+@*---------The Woodlands-------*@
     <div class="card card-1">
         
         <iframe class="card-img-top" alt="Card image cap" width="600" height="300" frameborder="0" style="border:0"
                 src="https://www.google.com/maps/embed/v1/place?q=9250+Pinecroft+Dr,+The+Woodlands,+TX+77380&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
             <div class="card-block">
-                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
+                <h4 class="card-title"><a href="/Appointment/theWoodlands">The Woodlands</a></h4>
             </div>
             <ul class="colom-list">
                 <li>
-                    <p>Phone: 713-323-272</p>
+                    <p>Phone: 713-323-2720</p>
                     <p>Fax: 713-490-5873</p>
                 </li>
                 <li>
@@ -83,70 +80,17 @@
                     <p>Closed Saturday and Sunday</p>
                 </li>
                 <li>
-                    <p>10905 Memorial Hermann Dr, Ste 111</p>
-                    <p>Pearland Texas 77584</p>
+                    <p>9250 Pinecroft Dr</p>
+                    <p>The Woodlands, Texas 77584</p>
                 </li>
 
             </ul>
         <div class="btn">
-            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
+            <a href="/Appointment/theWoodlands" class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow;">Make an Appointment</a>
         </div>
       
     </div>
-    <div class="card card-1">
-        
-        <iframe class="card-img-top" alt="Card image cap" width="600" height="300" frameborder="0" style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?q=9250+Pinecroft+Dr,+The+Woodlands,+TX+77380&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
-            <div class="card-block">
-                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
-            </div>
-            <ul class="colom-list">
-                <li>
-                    <p>Phone: 713-323-272</p>
-                    <p>Fax: 713-490-5873</p>
-                </li>
-                <li>
-                    <p>Hours: Monday-Friday 8am- 5pm</p>
-                    <p>Closed Saturday and Sunday</p>
-                </li>
-                <li>
-                    <p>10905 Memorial Hermann Dr, Ste 111</p>
-                    <p>Pearland Texas 77584</p>
-                </li>
-
-            </ul>
-        <div class="btn">
-            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
-        </div>
-       
-    </div>
-    <div class="card card-1">
-        
-        <iframe class="card-img-top" alt="Card image cap" width="600" height="300" frameborder="0" style="border:0"
-                src="https://www.google.com/maps/embed/v1/place?q=9250+Pinecroft+Dr,+The+Woodlands,+TX+77380&key=AIzaSyDShxu6b7WGT3hRCzpL16PzJ29enxzm7Ws" allowfullscreen></iframe>
-            <div class="card-block">
-                <h4 class="card-title"><a href="/home/Office">Woodlands</a></h4>
-            </div>
-            <ul class="colom-list">
-                <li>
-                    <p>Phone: 713-323-272</p>
-                    <p>Fax: 713-490-5873</p>
-                </li>
-                <li>
-                    <p>Hours: Monday-Friday 8am- 5pm</p>
-                    <p>Closed Saturday and Sunday</p>
-                </li>
-                <li>
-                    <p>10905 Memorial Hermann Dr, Ste 111</p>
-                    <p>Pearland Texas 77584</p>
-                </li>
-
-            </ul>
-        <div class="btn">
-            <a href="https://www.google.com/maps/dir//9250+Pinecroft+Dr,+Shenandoah,+TX+77380/30.175665,-95.455923,16z/data=!4m16!1m7!3m6!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2s9250+Pinecroft+Dr,+Shenandoah,+TX+77380!3b1!8m2!3d30.1756647!4d-95.4559232!4m7!1m0!1m5!1m1!1s0x864736e635b46c6d:0x6d8f7b67407a5ecf!2m2!1d-95.4559232!2d30.1756647?hl=en-US" class="btn btn-default" style="background-color: blue; color:white;">Get Directions</a>
-        </div>
-        
-    </div>
+  
 
 </body>
 </html>
