--- a/src/AllergySite/wwwroot/css/site.css
+++ b/src/AllergySite/wwwroot/css/site.css
@@ -85,6 +85,7 @@ border-radius: 5px 5px;
 .card-img-left{
     float: left;
     border-radius: 5px 5px;
+    margin: 10px;
 }
 .card-1{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -106,6 +107,12 @@ border-radius: 5px 5px;
 
 .card-large{
     width: 100%;
+    text-align: left;
+}
+
+.card-medium{
+    width: 48%;
+    text-align: left;
 }
 
 .colom{
@@ -117,6 +124,8 @@ border-radius: 5px 5px;
   text-align: center;
   vertical-align: top;
 }
+
+
 
 .colom-border{
     border-left: solid black 1px;
