added PatientPortal Layout, Veiws, Controllers

--- a/src/AllergySite/Views/Home/Physicians.cshtml
+++ b/src/AllergySite/Views/Home/Physicians.cshtml
@@ -26,7 +26,7 @@
                     Perry Cox MD, is a board-certified adult and pediatric allergy, asthma, and immunology specialist. He specializes in the diagnosis and treatment of allergic and non-allergic rhinitis, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, venom or insect allergy, and asthma.
                 </p>
                 <p>
-                    He completed his training in Internal Medicine, and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
+                    He completed his training in Internal Medicine and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
                 </p>
                 <p>
                     Dr. Cox is a member of several protentional organizations including Texas Allergy, Asthma and Immunology Society (TAAIS), the American Academy of Allergy, Asthma, and Immunology (AAAAI) and American College of Allergy, Asthma, and Immunology (ACAAI).
@@ -49,10 +49,10 @@
         <ul class="colom-list">
             <li>
                 <p>
-                    Elliot Read MD, is a board-certified adult and pediatric allergy, asthma, and immunology specialist. He specializes in the diagnosis and treatment of allergic and non-allergic rhinitis, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, venom or insect allergy, and asthma.
+                    Elliot Read MD, is a board-certified adult and pediatric allergy, asthma, and immunology specialist. She specializes in the diagnosis and treatment of allergic and non-allergic rhinitis, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, venom or insect allergy, and asthma.
                 </p>
                 <p>
-                    She completed his training in Internal Medicine, and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
+                    She completed his training in Internal Medicine and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
                 </p>
                 <p>
                     Dr. Read is a member of several protentional organizations including Texas Allergy, Asthma and Immunology Society (TAAIS), the American Academy of Allergy, Asthma, and Immunology (AAAAI) and American College of Allergy, Asthma, and Immunology (ACAAI).
@@ -81,18 +81,17 @@
                     John Micheal Dorian MD, is a board-certified adult and pediatric allergy, asthma, and immunology specialist. He specializes in the diagnosis and treatment of allergic and non-allergic rhinitis, acute and chronic sinusitis, allergic skin diseases, angioedema, food allergy, venom or insect allergy, and asthma.
                 </p>
                 <p>
-                    He completed his training in Internal Medicine, and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
+                    He completed his training in Internal Medicine and Allergy & Immunology at The University of Texas Medical Branch, Galveston.
                 </p>
                 <p>
                     Dr. Dorian is a member of several protentional organizations including Texas Allergy, Asthma and Immunology Society (TAAIS), the American Academy of Allergy, Asthma, and Immunology (AAAAI) and American College of Allergy, Asthma, and Immunology (ACAAI).
                 </p>
             </li>
+            <li>Texas Medical Center</li>
+            <li>Tuesday, Thursday 8am- 5pm</li>
             <li>The Galleria</li>
             <li>Monday, Wednesday, Friday 8am- 5pm</li>
             <li> </li>
-            <li>Texas Medical Center</li>
-            <li>Tuesday, Thursday 8am- 5pm</li>
-
         </ul>
         <div class="btn">
             <a href="/Appointment/Index" class="btn btn-default" style="background-color: navy; color:lightgoldenrodyellow;"> Make an Appointment</a>
