--- a/src/AllergySite/Views/Account/Login.cshtml
+++ b/src/AllergySite/Views/Account/Login.cshtml
@@ -9,11 +9,14 @@
 }
 
 <h2>@ViewData["Title"].</h2>
+<h4>To log in as a guest:</h4>
+<h4>User: guest@test.com</h4>
+<h4>Password: Test123!</h4>
+
 <div class="row">
     <div class="col-md-8">
         <section>
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -42,7 +45,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
+                        <a href="/PatientPortal/Index" class="btn btn-default">Log in</a>
                     </div>
                 </div>
                 <p>
@@ -54,9 +57,11 @@
             </form>
         </section>
     </div>
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h4>To log in as a guest:</h4>
+            <h4>User: guest@test.com</h4>
+            <h4>Password: Test123!</h4>
             <hr />
             @{
                 var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
@@ -84,7 +89,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
