--- a/src/AllergySite/Views/PatientPortal/ViewAppointments.cshtml
+++ b/src/AllergySite/Views/PatientPortal/ViewAppointments.cshtml
@@ -2,4 +2,8 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = "~/Views/Shared/_LayoutPatientPortal.cshtml";
 }
+
+<hr/>
+<h4>You have no appointments scheduled at this time.</h4>
