--- a/src/AllergySite/wwwroot/css/site.css
+++ b/src/AllergySite/wwwroot/css/site.css
@@ -100,6 +100,10 @@ border-radius: 5px 5px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
+.card-menu{
+    width: 250px;
+}
+
 .colom-list{
     list-style: none;
     margin-left: -40px;    
